--- a/index.html
+++ b/index.html
@@ -93,5 +93,75 @@
     <!-- Style -->
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <!-- Logo -->
+          <img src="./assets/img/logo.svg" alt="Lucy" class="logo" />
+          <!-- navbar -->
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Home</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Services & Rates</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Reviews</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link">Contacts us</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- header action -->
+          <div class="header-action">
+            <a href="#!" class="header-action__link">Sign in</a>
+            <a href="#!" class="btn header-action__btn">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- Hero -->
+      <section class="hero">
+        <div class="container">
+          <div class="hero__inner">
+            <!-- Hero Media -->
+            <div class="hero__media">
+              <div class="hero__img-wrap">
+                <img src="./assets/img/pet01.png" alt="" class="hero__img" />
+                <!-- Decorator -->
+                <img
+                  src="./assets/img/decor01.svg"
+                  alt=""
+                  class="hero__decor hero__decor-left"
+                />
+                <img
+                  src="./assets/img/decor02.svg"
+                  alt=""
+                  class="hero__decor hero__decor-right"
+                />
+              </div>
+              <div class="hero__img-wrap hero__img-wrap-small">
+                <img
+                  src="./assets/img/pet02.png"
+                  alt=""
+                  class="hero__img hero__img-small"
+                />
+              </div>
+            </div>
+            <!-- Hero content -->
+            <section class="hero__content"></section>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
