--- a/index.html
+++ b/index.html
@@ -150,11 +150,43 @@
                 />
               </div>
               <div class="hero__img-wrap hero__img-wrap-small">
-                <img
-                  src="./assets/img/pet02.png"
-                  alt=""
-                  class="hero__img hero__img-small"
-                />
+                <img src="./assets/img/pet02.png" alt="" class="hero__img" />
+              </div>
+              <div class="hero__list">
+                <!-- Hero list item 1 -->
+                <section class="hero-list-item">
+                  <img
+                    src="./assets/img/pet03.png"
+                    alt=""
+                    class="hero-list-item__thumb"
+                  />
+                  <div class="hero-list-item__info">
+                    <p class="hero-list-item__title">Pet Health</p>
+                    <div class="hero-list-item__skeleton"></div>
+                    <div
+                      class="hero-list-item__skeleton"
+                      style="--width: 39px"
+                    ></div>
+                  </div>
+                </section>
+                <!-- separate -->
+                <div class="hero-list-item__separate"></div>
+                <!-- Hero list item 2 -->
+                <section class="hero-list-item">
+                  <img
+                    src="./assets/img/pet04.png"
+                    alt=""
+                    class="hero-list-item__thumb"
+                  />
+                  <div class="hero-list-item__info">
+                    <p class="hero-list-item__title">Pet Care</p>
+                    <div class="hero-list-item__skeleton"></div>
+                    <div
+                      class="hero-list-item__skeleton"
+                      style="--width: 39px"
+                    ></div>
+                  </div>
+                </section>
               </div>
             </div>
             <!-- Hero content -->
