--- a/index.html
+++ b/index.html
@@ -128,99 +128,125 @@
         </div>
       </div>
     </header>
-    <main>
-      <!-- Hero -->
-      <section class="hero">
-        <div class="container">
-          <div class="hero__inner">
-            <!-- Hero Media -->
-            <div class="hero__media">
-              <div class="hero__img-wrap">
-                <img src="./assets/img/pet01.png" alt="" class="hero__img" />
-                <!-- Decorator -->
-                <img
-                  src="./assets/img/decor01.svg"
-                  alt=""
-                  class="hero__decor hero__decor-left"
-                />
-                <img
-                  src="./assets/img/decor02.svg"
-                  alt=""
-                  class="hero__decor hero__decor-right"
-                />
-              </div>
-              <div class="hero__img-wrap hero__img-wrap-small">
-                <img src="./assets/img/pet02.png" alt="" class="hero__img" />
-              </div>
-              <div class="hero__list">
-                <!-- Hero list item 1 -->
-                <section class="hero-list-item">
-                  <img
-                    src="./assets/img/pet03.png"
-                    alt=""
-                    class="hero-list-item__thumb"
-                  />
-                  <div class="hero-list-item__info">
-                    <p class="hero-list-item__title">Pet Health</p>
-                    <div class="hero-list-item__skeleton"></div>
-                    <div
-                      class="hero-list-item__skeleton"
-                      style="--width: 39px"
-                    ></div>
-                  </div>
-                </section>
-                <!-- separate -->
-                <div class="hero-list-item__separate"></div>
-                <!-- Hero list item 2 -->
-                <section class="hero-list-item">
-                  <img
-                    src="./assets/img/pet04.png"
-                    alt=""
-                    class="hero-list-item__thumb"
-                  />
-                  <div class="hero-list-item__info">
-                    <p class="hero-list-item__title">Pet Care</p>
-                    <div class="hero-list-item__skeleton"></div>
-                    <div
-                      class="hero-list-item__skeleton"
-                      style="--width: 39px"
-                    ></div>
-                  </div>
-                </section>
-              </div>
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero__inner">
+          <!-- Hero Media -->
+          <div class="hero__media">
+            <div class="hero__img-wrap">
+              <img src="./assets/img/pet01.png" alt="" class="hero__img" />
+              <!-- Decorator -->
+              <img
+                src="./assets/img/decor01.svg"
+                alt=""
+                class="hero__decor hero__decor-left"
+              />
+              <img
+                src="./assets/img/decor02.svg"
+                alt=""
+                class="hero__decor hero__decor-right"
+              />
             </div>
-            <!-- Hero content -->
-            <section class="hero__content">
-              <h1 class="hero__heading">
-                Established & Trusted Pet Care Service
-              </h1>
-              <p class="hero__desc">
-                Discover a wide variety of Pawsitive services to choose from,
-                including daycare, private walks, office duty and spa.
+            <div class="hero__img-wrap hero__img-wrap-small">
+              <img src="./assets/img/pet02.png" alt="" class="hero__img" />
+            </div>
+            <div class="hero__list">
+              <!-- Hero list item 1 -->
+              <section class="hero-list-item">
+                <img
+                  src="./assets/img/pet03.png"
+                  alt=""
+                  class="hero-list-item__thumb"
+                />
+                <div class="hero-list-item__info">
+                  <p class="hero-list-item__title">Pet Health</p>
+                  <div class="hero-list-item__skeleton"></div>
+                  <div
+                    class="hero-list-item__skeleton"
+                    style="--width: 39px"
+                  ></div>
+                </div>
+              </section>
+              <!-- separate -->
+              <div class="hero-list-item__separate"></div>
+              <!-- Hero list item 2 -->
+              <section class="hero-list-item">
+                <img
+                  src="./assets/img/pet04.png"
+                  alt=""
+                  class="hero-list-item__thumb"
+                />
+                <div class="hero-list-item__info">
+                  <p class="hero-list-item__title">Pet Care</p>
+                  <div class="hero-list-item__skeleton"></div>
+                  <div
+                    class="hero-list-item__skeleton"
+                    style="--width: 39px"
+                  ></div>
+                </div>
+              </section>
+            </div>
+          </div>
+          <!-- Hero content -->
+          <section class="hero__content">
+            <h1 class="hero__heading">
+              Established & Trusted Pet Care Service
+            </h1>
+            <p class="hero__desc">
+              Discover a wide variety of Pawsitive services to choose from,
+              including daycare, private walks, office duty and spa.
+            </p>
+            <div class="hero__row">
+              <a href="#!" class="btn btn--primary hero__cta-btn"
+                >Book a Meet
+                <span class="btn__icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="5"
+                    height="6"
+                    viewBox="0 0 5 6"
+                    fill="none"
+                  >
+                    <path
+                      d="M1.48584 0.5L3.98584 3L1.48584 5.5"
+                      stroke="currentcolor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </span>
+              </a>
+              <a href="#!" class="hero__cta-link">Schedule a Call</a>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+    <main style="height: 5000px">
+      <!-- About -->
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <section class="about__content">
+              <p class="about__label">// About //</p>
+              <h2 class="about__heading section__heading">
+                Best Agency For Your Pet.
+              </h2>
+              <p class="about__desc section__desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
               </p>
-              <div class="hero__row">
-                <a href="#!" class="btn btn--primary hero__cta-btn"
-                  >Book a Meet
-                  <span class="btn__icon">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="5"
-                      height="6"
-                      viewBox="0 0 5 6"
-                      fill="none"
-                    >
-                      <path
-                        d="M1.48584 0.5L3.98584 3L1.48584 5.5"
-                        stroke="currentcolor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      />
-                    </svg>
-                  </span>
-                </a>
-                <a href="#!" class="hero__cta-link">Schedule a Call</a>
+              <div class="about__checklist">
+                <span class="about__check-item">Certified Groomer</span>
+                <span class="about__check-item">Animal Lover</span>
+                <span class="about__check-item">14+ Years Experience</span>
+                <span class="about__check-item">Pet Parent Of 3 Dogs</span>
               </div>
             </section>
+            <div class="about__media"></div>
+            <div class="about__media"></div>
+            <section class="about__content"></section>
           </div>
         </div>
       </section>
