--- a/index.html
+++ b/index.html
@@ -385,8 +385,10 @@
             <div class="service__column">
               <!-- Service Item 1 -->
               <article class="service-item">
-                <h3 class="service-item__heading">Puppy Sitting</h3>
-                <p class="service-item__desc">
+                <h3>
+                  <a href="#!" class="service-item__heading">Puppy Sitting</a>
+                </h3>
+                <p class="service-item__desc line__clamp">
                   Helping your new pup to be a good boy or girl isn’t always
                   easy, but we’re here to help.s
                 </p>
@@ -394,8 +396,10 @@
               </article>
               <!-- Service Item 2 -->
               <article class="service-item">
-                <h3 class="service-item__heading">Dog Walking</h3>
-                <p class="service-item__desc">
+                <h3>
+                  <a href="#!" class="service-item__heading">Dog Walking</a>
+                </h3>
+                <p class="service-item__desc line__clamp">
                   Choose from a 30, 45, or 60-minute visit to give your pet
                   their daily dose of fun-filled.
                 </p>
@@ -403,8 +407,10 @@
               </article>
               <!-- Service Item 3 -->
               <article class="service-item">
-                <h3 class="service-item__heading">Pet Sitting</h3>
-                <p class="service-item__desc">
+                <h3>
+                  <a href="#!" class="service-item__heading">Pet Sitting</a>
+                </h3>
+                <p class="service-item__desc line__clamp">
                   While you’re away we can make sure your pet has all the food,
                   water, exercise, and, of course.
                 </p>
@@ -420,14 +426,18 @@
                 />
               </figure>
               <div class="service__cta-wrap">
-                <a href="#!" class="btn service__cta"> View All Services </a>
+                <a href="#!" class="btn service__cta btn-primary">
+                  View All Services
+                </a>
               </div>
             </div>
             <div class="service__column">
               <!-- Service Item 4 -->
               <article class="service-item">
-                <h3 class="service-item__heading">Overnight Care</h3>
-                <p class="service-item__desc">
+                <h3>
+                  <a href="#!" class="service-item__heading">Overnight Care</a>
+                </h3>
+                <p class="service-item__desc line__clamp">
                   If you’re away for the night, we can stay the night or stop by
                   in the evening and morning.
                 </p>
@@ -435,8 +445,8 @@
               </article>
               <!-- Service Item 5 -->
               <article class="service-item">
-                <h3 class="service-item__heading">Pet Taxi</h3>
-                <p class="service-item__desc">
+                <h3><a href="#!" class="service-item__heading">Pet Taxi</a></h3>
+                <p class="service-item__desc line__clamp">
                   Does your pet need a lift to the groomers, vet, or dog park?
                   We’ve got their tail covered.
                 </p>
@@ -444,14 +454,78 @@
               </article>
               <!-- Service Item 6 -->
               <article class="service-item">
-                <h3 class="service-item__heading">Pet Medical Admin</h3>
-                <p class="service-item__desc">
+                <h3>
+                  <a href="#!" class="service-item__heading"
+                    >Pet Medical Admin</a
+                  >
+                </h3>
+                <p class="service-item__desc line__clamp">
                   Our team of experienced professionals can help with everything
                   from pills to injections.
                 </p>
                 <a href="#!" class="service-item__more">Read More</a>
               </article>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- Staff -->
+      <section class="staff">
+        <div class="container">
+          <p class="staff__desc">Pet Care Staff</p>
+          <h2 class="section-heading staff__heading">Meet Our Groomers</h2>
+          <div class="staff__list">
+            <!-- Staff Item 1 -->
+            <article class="staff-item">
+              <figure class="staff-item__img-wrap">
+                <img
+                  src="./assets/img/staff01.png"
+                  alt=""
+                  class="staff-item__img"
+                />
+              </figure>
+              <p class="staff-item__title">Pet Trainer</p>
+              <h3 class="staff-item__name">Meghan Samit</h3>
+            </article>
+            <!-- Staff Item 2 -->
+            <article class="staff-item">
+              <figure class="staff-item__img-wrap">
+                <img
+                  src="./assets/img/staff02.png"
+                  alt=""
+                  class="staff-item__img"
+                />
+              </figure>
+              <p class="staff-item__title">Veterinarian</p>
+              <h3 class="staff-item__name">Alissa Silva</h3>
+            </article>
+            <!-- Staff Item 3 -->
+            <article class="staff-item">
+              <figure class="staff-item__img-wrap">
+                <img
+                  src="./assets/img/staff03.png"
+                  alt=""
+                  class="staff-item__img"
+                />
+              </figure>
+              <p class="staff-item__title">Veterinarian</p>
+              <h3 class="staff-item__name">Cindy Harris</h3>
+            </article>
+            <!-- Staff Item 4 -->
+            <article class="staff-item">
+              <figure class="staff-item__img-wrap">
+                <img
+                  src="./assets/img/staff04.png"
+                  alt=""
+                  class="staff-item__img"
+                />
+              </figure>
+              <p class="staff-item__title">Animal Caretaker</p>
+              <h3 class="staff-item__name">Lucas Tony</h3>
+            </article>
+          </div>
+          <div class="staff__cta-wrap">
+            <a href="#!" class="btn staff__cta btn-primary">View All Team</a>
           </div>
         </div>
       </section>
