--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
       </div>
     </section>
-    <main style="height: 5000px">
+    <main style="height: 10000px">
       <!-- About -->
       <section class="about">
         <div class="container">
@@ -772,6 +772,21 @@
                 />
               </svg>
             </button>
+          </div>
+        </div>
+      </section>
+      <!-- Blog -->
+      <section class="blog">
+        <div class="container">
+          <div class="blog__top">
+            <h2 class="section-heading">Our Blog</h2>
+            <div class="blog__info">
+              <p class="section-desc blog__desc">
+                Stay up to date with the latest tech trands and news in the
+                pets.
+              </p>
+              <a href="#!" class="btn blog__cta btn-primary">View All Blog</a>
+            </div>
           </div>
         </div>
       </section>
